fix shelly search, update readme