@@ -2,30 +2,55 @@
 
 ## PI setup
 
+OS: Raspberry Pi OS Lite
+
 install JRE
 
 ```bash
 sudo apt install -y openjdk-25-jre-headless
-
-# allow java to open ports < 1024
-sudo setcap 'cap_net_bind_service=+ep' $(readlink -f $(which java))
 ```
 
-service unit `sudo vim /etc/systemd/system/shome.service`
+logs nicht doppelt speichern
 
-```text
+```ini
+# /etc/systemd/journald.conf
+
+Storage=volatile
+RuntimeMaxUse=32M
+```
+
+Wi-Fi und BT deaktivieren
+
+```ini
+# /boot/firmware/config.txt
+
+[all]
+dtoverlay=disable-wifi
+dtoverlay=disable-bt
+```
+
+service unit
+
+```ini
+# /etc/systemd/system/shome.service
+
 [Unit]
 Description=Shome Server
 After=network.target
+StartLimitIntervalSec=0
 
 [Service]
 Type=simple
+User=admin
 WorkingDirectory=/home/admin
-ExecStart=/usr/bin/java -Xms128m -Xmx400m -Xss512k -XX:MaxMetaspaceSize=128m -XX:MaxDirectMemorySize=64m -XX:+UseSerialGC -XX:TieredStopAtLevel=1 -jar /home/admin/server-all.jar --port 80 --jar-path /home/admin/server-all.jar
-MemoryMax=700M
+ExecStart=/usr/bin/java -Xms128m -Xmx400m -Xss512k -XX:MaxMetaspaceSize=128m -XX:MaxDirectMemorySize=64m -XX:+UseSerialGC -XX:+UseCompactObjectHeaders -XX:+ExitOnOutOfMemoryError -XX:+PerfDisableSharedMem -jar /home/admin/server-all.jar --port 80 --jar-path /home/admin/server-all.jar
+MemoryMax=750M
+Environment=MALLOC_ARENA_MAX=2
 Restart=always
 RestartSec=5
-User=admin
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+NoNewPrivileges=true
 
 [Install]
 WantedBy=multi-user.target
@@ -42,9 +67,10 @@ sudo systemctl start shome.service
 usefully CMD's
 
 ```bash
-sudo systemctl status shome        # is running?
-sudo journalctl -u shome -f        # Logs live
-sudo systemctl restart shome       # after JAR update
+sudo systemctl status shome              # is running?
+sudo journalctl -u shome -f              # Logs live
+sudo systemctl restart shome             # after JAR update
+sudo systemctl show shome -p MemoryPeak  # memory peaks
 ```
 
 
@@ -54,8 +80,5 @@ sudo systemctl restart shome       # after JAR update
 ./gradlew server:installShadowDist
 
 # copy to PI
-scp server/build/install/server-shadow/lib/server-all.jar admin@192.168.0.103:~/
-
-# run
-java -jar server/build/install/server-shadow/lib/server-all.jar 
+scp server/build/install/server-shadow/lib/server-all.jar admin@192.168.178.128:~/
 ```
